# oarepo-citations

./: .eslintrc.js  .gitignore  README.md  oarepo.yaml  run-tests.sh  setup.cfg
oarepo_citations/i18n/semantic-ui/translations/oarepo_citations/messages/cs/LC_MESSAGES/: translations.json
oarepo_citations/i18n/semantic-ui/translations/oarepo_citations/messages/en/LC_MESSAGES/: translations.json
oarepo_citations/i18n/translations/: messages.mo  messages.pot
oarepo_citations/i18n/translations/cs/LC_MESSAGES/: messages.mo
oarepo_citations/i18n/translations/en/LC_MESSAGES/: messages.mo
oarepo_citations/ui/record_citations/: webpack.py
oarepo_citations/ui/record_citations/semantic-ui/js/record_citations/: components.jsx  hooks.js
oarepo_citations/ui/record_citations/semantic-ui/js/record_citations/dropdown/: index.js
oarepo_citations/ui/record_citations/semantic-ui/js/record_citations/dropdown/components/: CitationField.jsx  ClipboardCopyButton.jsx  RecordCitations.jsx
oarepo_citations/ui/record_citations/semantic-ui/js/record_citations/modal/components/: CitationListItem.jsx  ClipboardCopyButton.jsx  RecordCitationsModal.jsx
oarepo_citations/ui/record_citations/semantic-ui/less/oarepo_citations/themes/default/modules/: dropdown.overrides
oarepo_citations/ui/record_citations/templates/: RecordCitations.jinja
tests/: __init__.py  test_noop.py
