[metadata]
name = oarepo-citations
version = 1.0.0
description = Support for citations
authors = Mirek Simek <miroslav.simek@cesnet.cz>
readme = README.md
long_description = file:README.md
long_description_content_type = text/markdown

[options]
python = >=3.10
install_requires =
    oarepo-runtime>=1.4.44
    openpyxl
    oarepo-ui>=5.0.91
    cachetools
packages = find:
include_package_data = True

[options.extras_require]
dev =
    oarepo-tools
tests =
    pytest>=7.1.2
    pytest-invenio
    black
    isort
    autoflake

[options.packages.find]
exclude =
    tests

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2, *.po, *.mo, *.pot, *.js, *.jsx, *.less, *.jinja, *.overrides, *.variables

[options.entry_points]
invenio_base.blueprints =
    oarepo_citations_record = oarepo_citations.ui.record_citations:create_blueprint
invenio_assets.webpack =
    oarepo_citations_i18n = oarepo_citations.i18n.webpack:theme
    oarepo_citations_record_ui_theme = oarepo_citations.ui.record_citations.webpack:theme
invenio_i18n.translations =
    oarepo_citations_messages = oarepo_citations.i18n



